# DeliveryRobot

./: .gitignore  CMakeLists.txt  Confimapa.cpp  Divide y venceras.cpp  DivideMain.cpp  Main.cpp  README.md  tablero.json  ~$Mapa Segundo Proyecto  Datos II.xlsm
Include/: Backtracking.h  DivideVenceras.h  Estructura.h  Genetico.h  Greedy.h  Menu.h  Probabilisticos.h  ProgramacionDinamica.h  RutasUtil.h
data/: Mapa Segundo Proyecto  Datos II(20260508_130520).xlsm  Mapa Segundo Proyecto  Datos II.xlsm  ~$Mapa Segundo Proyecto  Datos II.xlsm
imgui/: imgui_demo.cpp
menu/: Menu.cpp  Menu.h  MenuMain.cpp
output copy/: grafo.dot
pruebas/: DivideMain.cpp  ProbaMain.cpp
pruebas/scr/: Confimapa.cpp
pruebas/scr/algortimos/: Backtracking.cpp  Dividevenceras.cpp  Genetico.cpp  Greedy.cpp  Probabilistico.cpp  ProgramacionDinamica.cpp  RutasUtil.cpp
scr/algortimos/: Backtracking.cpp  Dividevenceras.cpp  Genetico.cpp  Greedy.cpp  Probabilistico.cpp  ProgramacionDinamica.cpp
